...

    <ImageView
        android:id="@+id/coinsImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/coinsTextView"
        android:src="@drawable/coins" />

    <TextView
        android:id="@+id/coinsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
