<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ToggleButton
        android:id="@+id/filterNew"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/filter_button"
        android:shape="oval"
        android:textOff="New"
        android:textOn="New"
        android:textAllCaps="false" />

    <ToggleButton
        android:id="@+id/filterInProgress"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/filterNew"
        android:background="@drawable/filter_button"
        android:shape="oval"
        android:textOff="In progress"
        android:textOn="In progress"
        android:textAllCaps="false" />

    <ToggleButton
        android:id="@+id/filterOnReview"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/filterNew"
        android:background="@drawable/filter_button"
        android:shape="oval"
        android:textOff="On Review"
        android:textOn="On Review"
        android:textAllCaps="false"/>

    <ToggleButton
        android:id="@+id/filterAccepted"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/filterOnReview"
        android:layout_marginTop="10dp"
        android:background="@drawable/filter_button"
        android:shape="oval"
        android:textOff="Accepted"
        android:textOn="Accepted"
        android:textAllCaps="false" />

    <ToggleButton
        android:id="@+id/filterRejected"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/filterCompleted"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/filterAccepted"
        android:background="@drawable/filter_button"
        android:shape="oval"
        android:textOff="Rejected"
        android:textOn="Rejected"
        android:textAllCaps="false"/>

    <ToggleButton
        android:id="@+id/filterCompleted"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/filterInProgress"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/filterOnReview"
        android:background="@drawable/filter_button"
        android:shape="oval"
        android:textOff="Completed"
        android:textOn="Completed"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/filterCancel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/filterAccepted"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:shape="oval"
        android:text="Cancel"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/filterApply"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/filterRejected"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/filterCancel"
        android:backgroundTint="@color/purple_200"
        android:shape="oval"
        android:text="Apply"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>



</RelativeLayout>